bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:3: error: not found: value or
  if ((aSmile==true && bSmile==true)) or ((aSmile==false && bSmile==false)){return true;}
                                      ^