bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if ((aSmile==true && bSmile==true)) or ((aSmile==false && bSmile==false)){return true;}
  else{return false;}
}